@@ -1,5 +1,8 @@
 [b]Version 0.6.0rc3[/b] (not released yet):
 
+(2008-03-11)
+ * (Internal change) Use -monitorpixelaspect instead of -monitoraspect.
+
 (2008-03-08)
  * Use -colorkey for directx only.
 
